# MonadCXX

./: .gitlab-ci.yml  CMakeLists.txt  README.md  default.nix
MonadCXX/: CMakeLists.txt  MonadCXXConfig.cmake.in
MonadCXX/include/: MonadCXX.h
MonadCXX/include/MonadCXX/: MaybeMonad.h  MonadHelper.h  StateMonad.h
buildcontainer/: Dockerfile
tests/: CMakeLists.txt  TestMaybeMonad.cpp  TestStateMonad.cpp
